--- a/bin/TestApplication/style.scss
+++ b/bin/TestApplication/style.scss
@@ -54,25 +54,22 @@
   background-color: rgba(0, 0, 255, 0.09);
 }
 
-.shape{
+.shape {
   position: absolute;
   background-color: yellow;
-  border-color: #ffaa00;
+  border: solid 2px #ffaa00;
 }
 
 .frame {
-  position : absolute;
-  outline : 4px ridge #000000;
-  z-index: -1;
-}
+  position: absolute;
+  border: 2px solid #FF0000;  }
 
-.frame-point{
-  position : absolute;
+.frame-point {
+  position: inherit;
   width: 10px;
   height: 10px;
   border-radius: 5px;
-  background-color: #FF0000;
-}
+  background-color: #FF0000; }
 
 .triangle-shape {
   position: absolute;
@@ -80,5 +77,5 @@
   height: 0;
   border-left: 50px solid transparent;
   border-right: 50px solid transparent;
-  border-bottom: 100px solid yellow;
+  border-bottom: 100px solid #fff536;
 }
