--- a/bin/TestApplication/style.scss
+++ b/bin/TestApplication/style.scss
@@ -84,7 +84,8 @@
   height: 0;
   border-left: 50px solid transparent;
   border-right: 50px solid transparent;
-  border-bottom: 100px solid #ffaa00; }
+  border-bottom: 100px solid #ffaa00;
+}
 
 .triangle-interior {
   position: absolute;
@@ -92,7 +93,8 @@
   height: 0;
   border-left: 52px solid transparent;
   border-right: 52px solid transparent;
-  border-bottom: 102px solid #ffff00; }
+  border-bottom: 102px solid #ffff00;
+}
 
 .open {
   background: url("../../res/open.png") no-repeat;
@@ -100,7 +102,8 @@
   width: 55px;
   height: 55px;
   top: 0;
-  right: 220px; }
+  right: 220px;
+}
 
 .save {
   background: url("../../res/save.png") no-repeat;
@@ -108,7 +111,8 @@
   width: 55px;
   height: 55px;
   top: 0;
-  right: 165px; }
+  right: 165px;
+}
 
 .new {
   background: url("../../res/new.png") no-repeat;
@@ -116,4 +120,5 @@
   width: 55px;
   height: 55px;
   top: 0;
-  right: 275px; }
+  right: 275px;
+}
